--- a/.github/workflows/test-lint.yml
+++ b/.github/workflows/test-lint.yml
@@ -32,10 +32,13 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: npm install && npm audit --audit-level=low
+        run: npm ci && npm audit --audit-level=low
 
       - name: Install Playwright browsers
         run: npm run test:browser:install
+      
+      - name: Build the package
+        run: npm run build
 
       - name: Run unit tests
         run: npm run test:all:coverage
@@ -48,9 +51,6 @@ jobs:
 
       - name: Run type checking
         run: npm run type-check
-
-      - name: Build package
-        run: npm run build
 
       - name: Test packaging
         run: npm run test:package
