chore: Tweak agent runner to be more general-purpose
Two changes:

  1. Change the variable name from TYPESCRIPT_SESSIONS_BUCKET -> AGENT_SESSIONS_BUCKET; this makes the agent code more general purpose than *just* TS
  2. Use a session prefix that is equal to the GH repo name - this enables different repositories (and forks) to not conflict with eachother

--- a/.github/workflows/strands-command.yml
+++ b/.github/workflows/strands-command.yml
@@ -133,7 +133,7 @@ jobs:
           session_id: ${{ needs.setup-and-process.outputs.session_id }}
           task_prompt: ${{ needs.setup-and-process.outputs.prompt }}
           aws_role_arn: ${{ secrets.AWS_ROLE_ARN }}
-          sessions_bucket: ${{ secrets.TYPESCRIPT_SESSIONS_BUCKET }}
+          sessions_bucket: ${{ secrets.AGENT_SESSIONS_BUCKET }}
           write_permission: 'false'
           ref: ${{ needs.setup-and-process.outputs.branch }}
 
