Move vended-tools to a sub-folder of src

--- a/package.json
+++ b/package.json
@@ -23,24 +23,24 @@
       "default": "./dist/src/models/bedrock.js"
     },
     "./vended_tools/notebook": {
-      "types": "./dist/vended_tools/notebook/index.d.ts",
-      "default": "./dist/vended_tools/notebook/index.js"
+      "types": "./dist/src/vended-tools/notebook/index.d.ts",
+      "default": "./dist/src/vended-tools/notebook/index.js"
     },
     "./vended_tools/file_editor": {
-      "types": "./dist/vended_tools/file_editor/index.d.ts",
-      "default": "./dist/vended_tools/file_editor/index.js"
+      "types": "./dist/src/vended-tools/file_editor/index.d.ts",
+      "default": "./dist/src/vended-tools/file_editor/index.js"
     },
     "./vended_tools/http_request": {
-      "types": "./dist/vended_tools/http_request/index.d.ts",
-      "default": "./dist/vended_tools/http_request/index.js"
+      "types": "./dist/src/vended-tools/http_request/index.d.ts",
+      "default": "./dist/src/vended-tools/http_request/index.js"
     },
     "./vended_tools/bash": {
-      "types": "./dist/vended_tools/bash/index.d.ts",
-      "default": "./dist/vended_tools/bash/index.js"
+      "types": "./dist/src/vended-tools/bash/index.d.ts",
+      "default": "./dist/src/vended-tools/bash/index.js"
     }
   },
   "scripts": {
-    "build": "tsc --project src/tsconfig.json && tsc --project vended_tools/tsconfig.json",
+    "build": "tsc --project src/tsconfig.json",
     "check": "npm run lint && npm run format && npm run type-check && npm run test:coverage && npm run test:package",
     "clean": "rm -rf node_modules dist package-lock.json",
     "test": "vitest run --project unit-node",
@@ -55,11 +55,11 @@
     "test:all": "vitest run --project unit-node --project unit-browser",
     "test:all:coverage": "vitest run --coverage --project unit-node --project unit-browser",
     "test:package": "cd test/packages/esm-module && npm install && node esm.js && cd ../cjs-module && npm install && node cjs.js",
-    "lint": "eslint src tests_integ vended_tools",
-    "lint:fix": "eslint src tests_integ vended_tools --fix",
-    "format": "prettier --write src tests_integ vended_tools",
-    "format:check": "prettier --check src tests_integ vended_tools",
-    "type-check": "tsc --noEmit --project src/tsconfig.json && tsc --noEmit --project vended_tools/tsconfig.json && tsc --noEmit --project tests_integ/tsconfig.json",
+    "lint": "eslint src tests_integ",
+    "lint:fix": "eslint src tests_integ --fix",
+    "format": "prettier --write src tests_integ",
+    "format:check": "prettier --check src tests_integ",
+    "type-check": "tsc --noEmit --project src/tsconfig.json && tsc --noEmit --project tests_integ/tsconfig.json",
     "type-check:watch": "tsc --noEmit --watch",
     "prepare": "npm run build && husky"
   },
