--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
     "test:all": "vitest run --project unit-node --project unit-browser",
     "test:all:coverage": "vitest run --coverage --project unit-node --project unit-browser",
     "test:package": "cd test/packages/esm-module && npm install && node esm.js && cd ../cjs-module && npm install && node cjs.js",
-    "lint": "eslint src tests_integ",
-    "lint:fix": "eslint src tests_integ --fix",
-    "format": "prettier --write src tests_integ",
-    "format:check": "prettier --check src tests_integ",
-    "type-check": "tsc --noEmit --project src/tsconfig.json && tsc --noEmit --project tests_integ/tsconfig.json",
+    "lint": "eslint src test/integ",
+    "lint:fix": "eslint src test/integ --fix",
+    "format": "prettier --write src test/integ",
+    "format:check": "prettier --check src test/integ",
+    "type-check": "tsc --noEmit --project src/tsconfig.json && tsc --noEmit --project test/integ/tsconfig.json",
     "type-check:watch": "tsc --noEmit --watch",
     "prepare": "npm run build && husky"
   },
