--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
       "types": "./dist/src/models/bedrock.d.ts",
       "default": "./dist/src/models/bedrock.js"
     },
+    "./gemini": {
+      "types": "./dist/src/models/gemini.d.ts",
+      "default": "./dist/src/models/gemini.js"
+    },
     "./vended_tools/notebook": {
       "types": "./dist/src/vended-tools/notebook/index.d.ts",
       "default": "./dist/src/vended-tools/notebook/index.js"
@@ -108,6 +112,7 @@
     "zod": "^4.1.12"
   },
   "optionalDependencies": {
+    "@google/genai": "^1.31.0",
     "openai": "^6.7.0"
   },
   "overrides": {
