--- a/.github/workflows/issue-metadata-automation.yml
+++ b/.github/workflows/issue-metadata-automation.yml
@@ -13,6 +13,9 @@ jobs:
       id-token: write
     timeout-minutes: 10
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v6
+        
       - name: Auto-label and tag experts
         uses: ./.github/actions/strands-task-labeller
         with:
