--- a/.github/actions/strands-task-labeller/action.yml
+++ b/.github/actions/strands-task-labeller/action.yml
@@ -55,7 +55,7 @@ runs:
         role-session-name: GitHubActions-StrandsLabeller-${{ github.run_id }}
         aws-region: us-west-2
         mask-aws-account-id: true
-        inline_session_policy: >-
+        inline-session-policy: >-
           {
             "Version": "2012-10-17",
             "Statement": [
