--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.943.0",
     "@modelcontextprotocol/sdk": "^1.24.2",
+    "@strands-agents/sdk": "^0.1.1",
     "zod": "^4.1.12"
   },
   "optionalDependencies": {
