--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -7,6 +7,7 @@ on:
     types: [checks_requested]
 jobs:
   authorization-check:
+    name: Check access
     permissions: read-all
     runs-on: ubuntu-latest
     outputs:
@@ -47,7 +48,8 @@ jobs:
           script: |
             return "auto-approve"
 
-  check-access-and-checkout:
+  run-integration-tests:
+    name: Run integration tests
     runs-on: ubuntu-latest
     needs: authorization-check
     environment: ${{ needs.authorization-check.outputs.approval-env }}
