--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
       "types": "./dist/src/index.d.ts",
       "default": "./dist/src/index.js"
     },
+    "./anthropic": {
+      "types": "./dist/src/models/anthropic.d.ts",
+      "default": "./dist/src/models/anthropic.js"
+    },
     "./openai": {
       "types": "./dist/src/models/openai.d.ts",
       "default": "./dist/src/models/openai.js"
@@ -103,12 +107,12 @@
   },
   "homepage": "https://github.com/strands-agents/sdk-typescript#readme",
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.71.2",
     "@aws-sdk/client-bedrock-runtime": "^3.943.0",
     "@modelcontextprotocol/sdk": "^1.24.2",
     "zod": "^4.1.12"
   },
   "optionalDependencies": {
+    "@anthropic-ai/sdk": "^0.71.2",
     "openai": "^6.7.0"
   },
   "overrides": {
