--- a/examples/browser-agent/package.json
+++ b/examples/browser-agent/package.json
@@ -5,12 +5,11 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
+        "build": "vite build",
         "preview": "vite preview"
     },
     "dependencies": {
         "@strands-agents/sdk": "*",
-        "openai": "^6.10.0",
         "zod": "4.1.13"
     },
     "devDependencies": {
