--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
   "homepage": "https://github.com/strands-agents/sdk-typescript#readme",
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.943.0",
-    "@modelcontextprotocol/sdk": "^1.24.2",
+    "@modelcontextprotocol/sdk": "1.25.2",
     "zod": "^4.1.12"
   },
   "optionalDependencies": {
