--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
   "devDependencies": {
     "@aws-sdk/client-secrets-manager": "^3.943.0",
     "@aws-sdk/credential-providers": "^3.943.0",
-    "@modelcontextprotocol/sdk": "^1.24.2",
     "@types/json-schema": "^7.0.15",
     "@types/node": "^24.6.0",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
@@ -91,8 +90,7 @@
     "prettier": "^3.7.4",
     "tsx": "^4.21.0",
     "typescript": "^5.5.0",
-    "vitest": "^4.0.8",
-    "zod": "^4.1.12"
+    "vitest": "^4.0.8"
   },
   "engines": {
     "node": ">=20.0.0"
