--- a/.github/workflows/strands-command.yml
+++ b/.github/workflows/strands-command.yml
@@ -85,6 +85,7 @@ jobs:
           langfuse_public_key: ${{ secrets.LANGFUSE_PUBLIC_KEY }}
           langfuse_secret_key: ${{ secrets.LANGFUSE_SECRET_KEY }}
           langfuse_host: ${{ secrets.LANGFUSE_HOST }}
+          evals_sqs_queue_arn: ${{ secrets.EVALS_SQS_QUEUE_ARN }}
 
   finalize:
     needs: [setup-and-process, execute-readonly-agent]
