chore(deps): update @google/genai to 1.40.0
Update to latest SDK version which includes thoughtSignature in Part
type natively. Simplify code by removing custom type workaround.

- Remove PartWithThoughtSignature type extension
- Use native Part.thoughtSignature (string type, base64 encoded)
- Update tests to expect string instead of Uint8Array

--- a/package.json
+++ b/package.json
@@ -137,5 +137,8 @@
   "overrides": {
     "rollup": "4.52.5",
     "fast-xml-parser": "5.3.4"
+  },
+  "optionalDependencies": {
+    "@google/genai": "^1.40.0"
   }
 }
