--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,9 +30,10 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Install Playwright browsers
         run: npm run test:browser:install
