--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@aws-sdk/client-secrets-manager": "^3.943.0",
+    "@google/genai": "^0.14.0",
     "@aws-sdk/credential-providers": "^3.943.0",
     "@types/json-schema": "^7.0.15",
     "@types/node": "^24.6.0",
