--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   "devDependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
     "@aws-sdk/client-secrets-manager": "^3.943.0",
+    "@aws-sdk/client-s3": "^3.982.0",
     "@aws-sdk/credential-providers": "^3.943.0",
     "@google/genai": "^1.40.0",
     "@types/json-schema": "^7.0.15",
