--- a/package.json
+++ b/package.json
@@ -82,8 +82,8 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
-    "@aws-sdk/client-secrets-manager": "^3.943.0",
-    "@aws-sdk/credential-providers": "^3.943.0",
+    "@aws-sdk/client-secrets-manager": "^3.893.0",
+    "@aws-sdk/credential-providers": "^3.893.0",
     "@google/genai": "^1.40.0",
     "@types/json-schema": "^7.0.15",
     "@types/node": "^24.6.0",
@@ -114,11 +114,11 @@
   },
   "homepage": "https://github.com/strands-agents/sdk-typescript#readme",
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.943.0"
+    "@aws-sdk/client-bedrock-runtime": "^3.893.0"
   },
   "peerDependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
-    "@aws-sdk/client-s3": "^3.982.0",
+    "@aws-sdk/client-s3": "^3.893.0",
     "@google/genai": "^1.40.0",
     "@modelcontextprotocol/sdk": "^1.25.2",
     "openai": "^6.7.0",
@@ -140,6 +140,6 @@
   },
   "overrides": {
     "rollup": "4.52.5",
-    "fast-xml-parser": "5.3.4"
+    "fast-xml-parser": ">=5.3.6"
   }
 }
