--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
+    "@aws-sdk/client-s3": "^3.893.0",
     "@aws-sdk/client-secrets-manager": "^3.893.0",
     "@aws-sdk/credential-providers": "^3.893.0",
     "@google/genai": "^1.40.0",
