--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
+    "@aws-sdk/client-s3": "^3.943.0",
     "@aws-sdk/client-secrets-manager": "^3.943.0",
     "@aws-sdk/credential-providers": "^3.943.0",
     "@google/genai": "^1.40.0",
@@ -118,6 +119,7 @@
   },
   "peerDependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
+    "@aws-sdk/client-s3": "^3.943.0",
     "@google/genai": "^1.40.0",
     "@modelcontextprotocol/sdk": "^1.25.2",
     "openai": "^6.7.0",
@@ -125,6 +127,9 @@
   },
   "peerDependenciesMeta": {
     "@anthropic-ai/sdk": {
+      "optional": true
+    },
+    "@aws-sdk/client-s3": {
       "optional": true
     },
     "@google/genai": {
@@ -136,6 +141,6 @@
   },
   "overrides": {
     "rollup": "4.52.5",
-    "fast-xml-parser": "5.3.4"
+    "fast-xml-parser": ">=5.3.6"
   }
 }
