Address PR feedback and improve browser-agent example UI

--- a/examples/browser-agent/package.json
+++ b/examples/browser-agent/package.json
@@ -10,8 +10,7 @@
     },
     "dependencies": {
         "@strands-agents/sdk": "*",
-        "marked": "^17.0.3",
-        "zod": "^4.1.12"
+        "marked": "^17.0.3"
     },
     "devDependencies": {
         "typescript": "^5.5.0",
